--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -58,6 +58,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/GP3_Multiplayer")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="GP3_MultiplayerGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="GP3_MultiplayerCharacter")
+bUseFixedFrameRate=True
+FixedFrameRate=144.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -102,3 +104,4 @@ MinDynamicBandwidth=20000
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 MaxClientRate=800000
 MaxInternetClientRate=800000
+
