--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -105,3 +105,8 @@ MinDynamicBandwidth=20000
 MaxClientRate=800000
 MaxInternetClientRate=800000
 
+[Startup]
+t.IdleWhenNotForeground=0
+r.ThrottleWhenUnfocused=0
+t.MaxFPS=144
+
